# acre

./: README.md  pyproject.toml
demos/: README.md  acre-demo.kdl  acre-demo.tape  calculator.py
src/acre/: __init__.py  app.py  cli.py
src/acre/core/: __init__.py  diff_loader.py  diff_source.py  llm.py  semantic.py  session.py  watcher.py
src/acre/models/: __init__.py  comment.py  diff.py  export.py  ocr_adapter.py  review.py
src/acre/screens/: __init__.py  help.py  main.py
src/acre/widgets/: __init__.py  comment_input.py  comment_panel.py  diff_view.py  file_list.py  llm_sidebar.py  resolved_panel.py  splitter.py  status_bar.py
