[project]
name = "acre"
version = "0.1.0"
description = "Agentic Code Review - TUI for AI-assisted code review"
readme = "README.md"
authors = [
    { name = "Yurii Rashkovskii", email = "yrashk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "code-diff>=0.1.3",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual>=6.11.0",
    "unidiff>=0.7.5",
    "watchfiles>=1.1.1",
]

[project.scripts]
acre = "acre.cli:cli"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
